src/test/resources/semantic/sentences/error/TC_ERROR_ASIGNATION1.ru

/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 11 | COLUMNA 10 | Se esperaba una variable de tipo Int y se encontro una de tipo Str. |
struct A{
    Int a;
}

impl A{
    .(){
        a="";
    }
}

start{
}
